clap_derive/tests/ui/external_subcommand_misuse.stderr
error: `external_subcommand` can be used only on enum variants
 --> $DIR/external_subcommand_misuse.rs:5:12
  |
5 |     #[clap(external_subcommand)]
  |            ^^^^^^^^^^^^^^^^^^^
